--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -15,7 +15,7 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
-        <li><a href="../Voksen/voksenForside.html">Lærer/foreldre siden</a>
+        <li><a href="../info/forside.html">Lærer/foreldre siden</a>
         </li>
         <li><a href="#">Min side</a>
         </li>
