--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -19,37 +19,15 @@
 
 <body>
 <!--MENU-->
-<div class="fixed contain-to-grid">
-  <nav class="top-bar" data-topbar role="navigation">
-    <ul class="title-area">
-      <li class="name">
-        <a href="./barnForside.html"><img id="siteLogo" src="/assets/barn/logos/salaby_logo_enkel_rød.png" alt="logo"></a>
-      </li>
-      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
-      </li>
-    </ul>
+<%= render 'shared/page_header' %>
 
-    <section class="top-bar-section">
-      <!-- Right Nav Section -->
-      <ul class="right">
-        <li><a href="#">Lærer/foreldre siden</a>
-        </li>
-        <li><a href="#">Min side</a>
-        </li>
-        <li><a href="#">Logg ut</a>
-        </li>
-      </ul>
-    </section>
-  </nav>
-</div>
 <div class="row" id="mainMenu">
 
   <div class="large-3 medium-6 small-6 columns">
     <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
   </div>
   <div class="large-3 medium-6 small-6 columns">
-    <a href="./barnForside.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake">
+    <a href="./forside.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake">
     </a>
 
   </div>
@@ -117,40 +95,8 @@
 
 <!-- Footer -->
 
-<footer id="footer">
-  <div class="row">
-    <div class="large-4 columns">
-      <div id="footerLogo">
-        <img src="/assets/barn/logos/salaby_logo_enkel_grå.png" alt="logo">
-      </div>
-    </div>
 
-    <div class="large-6 columns">
-      <div id="footerMid">
-        <ul>
-          <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-          </li>
-          <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-          </li>
-          <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="large-2 columns">
-      <div id="socialLinks">
-        <a href="https://www.facebook.com/salaby">
-          <img src="/assets/barn/social/Facebook_logo.png" alt="Facebooklogo">
-        </a>
-        <a href="https://www.youtube.com/user/SalabyGyldendal">
-          <img src="/assets/barn/social/youtube_logo.png" alt="Youtubelogo">
-        </a>
-      </div>
-    </div>
-  </div>
-  <a href="#0" class="cd-top">Top</a>
-</footer>
+<%= render 'shared/page_footer' %>
 
 <!-- FOOTER SLUTT -->
 
