--- a/Salabytest/app/views/shared/_page_header_info.html.erb
+++ b/Salabytest/app/views/shared/_page_header_info.html.erb
@@ -19,6 +19,7 @@
         </li>
         <li><%=link_to "Informasjon", static_pages_info_informasjon_path %>
         </li>
+          <!--SCRIPT FOR Å SJEKKE OM BRUKER ER LOGGET INN-->
         <% if logged_in? %>
           <li>
               <a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">
@@ -30,8 +31,9 @@
             </ul>
           </li>
         <% else %>
-            <li><%= link_to "Log in", login_path %></li>
+            <li><%= link_to "Logg in", login_path %></li>
         <% end %>   
+          <!--SLIUTT PÅ SCRIPT-->
         <li><%=link_to "Til Barnesiden", static_pages_barn_forside_path %>
         </li>
       </ul>
