--- a/Salabytest/app/views/users/index.html.erb
+++ b/Salabytest/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing users</h1>
+<h1>BRUKERE</h1>
 
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Fornavn</th>
+      <th>Etternavn</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
       <tr>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Vis', user %></td>
+        <td><%= link_to 'Endre bruker', edit_user_path(user) %></td>
+        <td><%= link_to 'Slett', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
