fiksa filsti til introside

--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -3,9 +3,9 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <a href="../index.html">
-          <img id="siteLogo" src="/assets/logos/salaby_logo_enkel_rod.png" alt="logo">
-        </a>
+
+        <%=link_to image_tag("logos/salaby_logo_enkel_rod.png", border: 0), root_path, {class: 'dock-item'}%>
+        
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
