la til backtotop script og endret css

--- a/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
@@ -82,7 +82,7 @@
 
 <!-- FOOTER SLUTT -->
 
-<script src="js/backtotop.js"></script>
+<script src="/assets/javascripts/barn/backtotop.js"></script>
 </body>
 
 </html>
