--- a/Salabytest/app/views/users/_form.html.erb
+++ b/Salabytest/app/views/users/_form.html.erb
@@ -15,7 +15,7 @@
         <%= f.label :password %>
         <%= f.password_field :password %>
 
-        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.label :password_confirmation, "Bekreft passordet" %>
         <%= f.password_field :password_confirmation %>
 
         <%= f.submit "Lag konto", class: "btn btn-primary" %>
