--- a/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js hinduisme" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -82,7 +82,7 @@
 
 <!-- FOOTER SLUTT -->
 
-<script src="/assets/javascripts/barn/backtotop.js"></script>
+
 </body>
 
 </html>
