--- a/Salabytest/app/assets/stylesheets/barn/religion.css
+++ b/Salabytest/app/assets/stylesheets/barn/religion.css
@@ -110,66 +110,7 @@ body {
     max-width: 300px;
 }
 /*---------Hovedområde SLUTT!!---------*/
-/*---------Footer!!-----------*/
 
-#footer {
-    width: 100%;
-    background-color: #858585;
-    height: auto;
-    margin-top: -30px;
-}
-#footerLogo img {
-    width: 110px;
-    margin: 15px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-}
-#footerLogo img:hover {
-    transform: scale(1.1, 1.1);
-    -ms-transform: scale(1.1, 1.1);
-    /* IE 9 */
-
-    -webkit-transform: scale(1.1, 1.1);
-    /* Chrome, Safari, Opera */
-
-    opacity: 0.7;
-}
-
-#footerMid li a {
-    color: white;
-}
-#footerMid li{
-    float: left;
-    margin: 5px;
-    list-style: none;
-}
-#footerMid li a:hover {
-    color: rgb(200, 200, 200);
-}
-#socialLinks img {
-    width: 40px;
-    margin: 5px;
-    margin-top: 20px;
-    cursor: pointer;
-    transition: all 0.15s ease-in-out 0s;
-    -webkit-transition: all 0.15s ease-in-out 0s;
-    -moz-transition: all 0.15s ease-in-out 0s;
-    -o-transition: all 0.15s ease-in-out 0s;
-}
-#socialLinks img:hover {
-    transform: scale(1.1, 1.1);
-    -ms-transform: scale(1.1, 1.1);
-    /* IE 9 */
-
-    -webkit-transform: scale(1.1, 1.1);
-    /* Chrome, Safari, Opera */
-
-    opacity: 0.7;
-}
-/*---------Footer SLUTT!!-----------*/
 /*HIDE ELEMENTS*/
 
 .kanalS {
@@ -213,7 +154,8 @@ body {
 .top-bar .toggle-topbar.menu-icon a span::after {
     box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
 }
-/*back to top*/
+
+/*STYLING PÅ TILBAKE TIL TOP KNAPPEN*/
 
 .cd-top {
     display: inline-block;
@@ -255,6 +197,9 @@ body {
     background-color: #e86256;
     opacity: 1;
 }
+
+/*END PÅ STYLING PÅ TILBAKE TIL TOP*/
+
 @media only screen and (min-width: 768px) {
     .cd-top {
         right: 20px;
