--- a/Salabytest/app/views/static_pages/barn/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/islam.html.erb
@@ -166,7 +166,7 @@
   <div class="row">
     <div class="large-4 columns">
       <div id="footerLogo">
-        <img src="/assets/barn/logos/salaby_logo_enkel_grå.png" alt="logo">
+        <img src="/assets/barn/logos/salaby_logo_enkel_grå.png" alt="logo">
       </div>
     </div>
 
