--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -12,6 +12,7 @@
           background-attachment: fixed;
           background-position: center bottom;
           background-size: cover;
+          background-color: rgba(255,214,133, 0.3);
       }
   </style>
   <script src="js/vendor/modernizr.js"></script>
@@ -38,7 +39,7 @@
   </div>
 </div>
 
-<div id="test">
+<div class="test">
 
   <div class="row">
     <div class="large-3 small-6 medium-4 columns">
@@ -49,7 +50,7 @@
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="/assets/barn/RLE/islam.png" alt="Islambilde">
+        <a href="islam.html"><img src="/assets/barn/RLE/islam.png" alt="Islambilde"> </a>
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
