header referer til profilside

--- a/Salabytest/app/views/users/show.html.erb
+++ b/Salabytest/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <%=render 'shared/page_header'%>
 
 <% if logged_in? %>
-    <p>Velkommen, <%= current_user.username%></p>
+    <p>Dette er deg!</p>
     <%end%>
 
 <p>
