--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -25,7 +25,7 @@
               <a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">
                   Min Side <b class="caret"></b></a>
                 <ul id="hover1" class="f-dropdown" data-dropdown-content>
-                    <li><%=link_to "Instillinger", users_path %></li>
+                    <li><%=link_to "Instillinger", user_path(current_user) %></li>
                     <li class="divider"></li>
                     <li><%= link_to "Log ut", logout_path %></li>
             </ul>
