--- a/Salabytest/app/assets/stylesheets/barn/religion.css
+++ b/Salabytest/app/assets/stylesheets/barn/religion.css
@@ -128,7 +128,7 @@ body {
 }
 /*HINDUISME*/
 
-.top-bar {
+/*.top-bar {
     height: 52px;
     background-color: #f2f2f2;
     border-bottom: solid thin #dcdcdc;
@@ -157,7 +157,7 @@ body {
 }
 .top-bar .toggle-topbar.menu-icon a span::after {
     box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
-}
+}/*
 
 /*STYLING PÅ TILBAKE TIL TOP KNAPPEN*/
 
