--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -221,7 +221,7 @@ box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  background: rgba(232, 98, 86, 0.8) url(../img/cd-top-arrow.svg) no-repeat center 50%;
+  background: #cc3327 url(/assets/barn/cd-top-arrow.svg) no-repeat center 50%;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity .3s 0s, visibility 0s .3s;
@@ -243,8 +243,9 @@ box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
   opacity: .5;
 }
 .no-touch .cd-top:hover {
-  background-color: #e86256;
-  opacity: 1;
+  transform: scale(1.1,1.1);
+  -ms-transform: scale(1.1,1.1); /* IE 9 */
+  -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
 }
 @media only screen and (min-width: 768px) {
   .cd-top {
