--- a/Salabytest/app/assets/stylesheets/barn/religion.css
+++ b/Salabytest/app/assets/stylesheets/barn/religion.css
@@ -95,14 +95,22 @@ body {
     -webkit-transition: all 0.15s ease-in-out 0s;
     -moz-transition: all 0.15s ease-in-out 0s;
     -o-transition: all 0.15s ease-in-out 0s;
+
+
 }
-.align-center:hover {
+
+
+
+.align-center:hover{
     transform: scale(1.1, 1.1);
     -ms-transform: scale(1.1, 1.1);
     /* IE 9 */
 
     -webkit-transform: scale(1.1, 1.1);
     /* Chrome, Safari, Opera */
+    filter: gray; /* IE6-9 */
+    filter: grayscale(0.8); /* Firefox 35+ */
+    -webkit-filter: grayscale(0.8); /* Google Chrome, Safari 6+ & Opera 15+ */
 
 
 }
@@ -202,4 +210,5 @@ max-width: 69.5rem;
 .contain-to-grid {
     background-color: #f2f2f2;
 }
+
 
