--- a/Salabytest/app/assets/stylesheets/shared/header.css
+++ b/Salabytest/app/assets/stylesheets/shared/header.css
@@ -3,6 +3,7 @@
     background-color: #f2f2f2;
     border-bottom: solid thin #dcdcdc;
     color: #333;
+    margin-bottom: 2em;
 }
 
 .title-area {
