--- a/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
+++ b/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
@@ -6,5 +6,15 @@
     
 };
 #userInfo{
-    
+    display: none;
 };
+
+h1 {
+    color: red;
+}
+
+
+body {
+    background-color: red;
+    background-image: none;
+}
