--- a/Salabytest/app/views/users/show.html.erb
+++ b/Salabytest/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Salaby | Min Side</title>
   <link rel="stylesheet" href="/assets/barn/forside_barn.css" />
-  <link rel="stylesheet" href="/assets/barn/mobile.css" />
+  <link rel="stylesheet" href="/assets/shared/userpageStyle.css" />
+    <link rel="stylesheet" href="/assets/barn/mobile.css" />
+    
 
 </head>
 
@@ -16,6 +18,7 @@
 
 <%= render 'shared/page_header' %>
 
+    
 <div id="wrapper">
     <div class="row">
         <div class="large-12 columns">
@@ -35,21 +38,33 @@
                     </div>
                 </div>
                 <div class="row">
+                    <% if current_user.class_admin? %>
                     <div class="large-8 columns">
-                        <div id="contentArea">
-                            <% if current_user.class_admin?%>
-                            <!-- //HVIS BRUKER ER LÆRER, VIS KLASSER
-                            
-                            <% else %>
-                            //HVIS BRUKER ER ELEV, VIS LEKSER 
-                            //Hente frem hver lekse
-
--->
-                            
-                            <% end %> 
-                        <div class="large-4 columns">
+                            <div class="panel">
+                                <div id="classesArea">    
+                                    <h3>Klasser</h3>
+                                </div>
+                        </div>
+                    </div>
+                    <!--SLUTT PÅ AREA-->
+                    <% else %>
+                    <div class="large-8 columns">
+                            <div class="panel">
+                                <div id="homeworkArea">    
+                                    <h3>Lekser</h3>
+                                </div>
+                        </div>
+                    </div>
+                    <% end %>
+                    <!--SLUTT PÅ AREA-->
+                    <div class="large-4 columns">
+                        <div class="panel">
                             <div id="favorites">  
-                                
+                                <h3>Favoritter</h3>
+                                <ul>
+                                    <li>RLE</li>
+                                    <li>NORSK</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -57,7 +72,6 @@
             </div>
         </div>
     </div>
-</div>
 <%= render 'shared/page_footer' %>
 
 
