--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -61,7 +61,7 @@
     <div class="large-3 small-6 medium-4 columns">
 
       <div id="align_center" class="align-center">
-        <img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde">
+        <a href="jodedom.html"><img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde">
       </div>
 
     </div>
