--- a/Salabytest/app/views/static_pages/barn/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/islam.html.erb
@@ -5,201 +5,119 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Islam</title>
-  <link rel="stylesheet" href="/assets/barn/islam.css" />
+  <link rel="stylesheet" href="/assets/barn/religion.css" />
+  <style>
+        body {
+          background: url("/assets/barn/islam/islambkg.jpg") no-repeat;
+          background-attachment: fixed;
+          background-position: center bottom;
+          background-size: cover;
+          background-color: rgba(0,163,204, 0.3);
+      }
+  </style>
 </head>
 
 <body>
 
-<!--MENU-->
-<header>
-  <div class="fixed contain-to-grid">
+<!--HEADER-->
+<%= render 'shared/page_header' %>
+<!--HEADER END-->
 
-    <nav class="top-bar" data-topbar role="navigation">
-
-      <ul class="title-area">
-        <li class="name">
-          <a href="./barnForside.html"><img id="siteLogo" src="/assets/barn/logos/salaby_logo_enkel_rød.png" alt="logo">
-
-          </a>
-        </li>
-        <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
-        </li>
-      </ul>
-
-      <section class="top-bar-section">
-        <!-- Right Nav Section -->
-        <ul class="right">
-          <li><a href="../info/forside.html">Lærer/foreldre siden</a>
-          </li>
-          <li><a href="#">Min side</a>
-          </li>
-          <li><a href="#">Logg ut</a>
-          </li>
-        </ul>
-      </section>
-    </nav>
-  </div>
-</header>
-
-
-
-<section id="test">
-
+<section class="test">
   <div class="row" id="mainMenu">
-
     <div class="large-3 medium-6 small-6 columns">
       <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
     </div>
-    <div class="large-3 medium-6 small-6 columns">
-      <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake">
-      </a>
 
-    </div>
+      <div class="large-3 medium-6 small-6 columns">
+        <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake"></a>
+      </div>
   </div>
+
   <div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">Islam</h1>
     </div>
   </div>
 
-    
-    
-    <!--NY LINJE-->
-    <div class="row">
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/islam.png" alt="Islam bilde">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-<img src="/assets/barn/islam/fbonn.png" alt="Forberede bønn film">
-          </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-                  <img src="/assets/barn/islam/bonn.png" alt="Bønn film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-    </div>
-    
-    <!--NY LINJE-->
-    <div class="row">
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/bonnest.png" alt="Bønnestillinger film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/bonnetelt.png" alt="Bønnetelt film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/mihrab.png" alt="Mihrab film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-    </div>
-    
-    <!--NY LINJE-->
-    <div class="row">
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/minraet.png" alt="Minraet film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/kalligrafi.png" alt="Kalligrafi film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/kvinnedelen.png" alt="Kvinnedelen film">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-    </div>
-    
-     <!--NY LINJE-->
-    <div class="row">
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/film.png" alt="Film oppgaver">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      <!--KODE BLOKK FOR HVER ARTIKKEL-->
-      <div class="large-4 small-12 columns">
-        <article>
-          <img src="/assets/barn/islam/tegn.png" alt="Film med tegnspråk">
-        </article>
-      </div>
-      <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-      </div>
-    
-</section>
-<!-- Footer -->
+  <div class="test">    
 
-
-<footer id="footer">
   <div class="row">
-    <div class="large-4 columns">
-      <div id="footerLogo">
-        <img src="/assets/barn/logos/salaby_logo_enkel_grå.png" alt="logo">
-      </div>
-    </div>
 
-    <div class="large-6 columns">
-      <div id="footerMid">
-        <ul>
-          <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-          </li>
-          <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-          </li>
-          <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-          </li>
-        </ul>
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/fbonn.png" alt="Forberede bønn film">
+        </div>
       </div>
-    </div>
 
-    <div class="large-2 columns">
-      <div id="socialLinks">
-        <a href="https://www.facebook.com/salaby">
-          <img src="/assets/barn/social/Facebook_logo.png" alt="Facebooklogo">
-        </a>
-        <a href="https://www.youtube.com/user/SalabyGyldendal">
-          <img src="/assets/barn/social/youtube_logo.png" alt="Youtubelogo">
-        </a>
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center"> 
+           <img src="/assets/barn/islam/bonn.png" alt="Bønn film">
+        </div>
       </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/bonnest.png" alt="Bønnestillinger film">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/bonnetelt.png" alt="Bønnetelt film">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/mihrab.png" alt="Mihrab film">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/minraet.png" alt="Minraet film">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/kalligrafi.png" alt="Kalligrafi film">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/kvinnedelen.png" alt="Kvinnedelen film">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/film.png" alt="Film oppgaver">
+        </div>
+      </div>
+
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+            <img src="/assets/barn/islam/tegn.png" alt="Film med tegnspråk">
+        </div>
+      </div>
+      <div class="large-3"></div>
     </div>
   </div>
-  <a href="#0" class="cd-top">Top</a>
-</footer>
+</section>
+
+<!-- Footer -->
+
+<%= render 'shared/page_footer' %>
 
 <!-- FOOTER SLUTT -->
 
-<script src="js/main.js"></script>
+
+<script>
+    $(document).foundation();
+</script>
 </body>
 
 </html>
