--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+<img src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
 <%= render 'shared/page_header' %>
 
 <div id="wrapper">
