endret bilde plasseringer på islam siden

--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -62,16 +62,17 @@
           <img src="/assets/barn/RLE/kristendom.png" alt="Kristendombilde">
         </div>
       </div>
+      
+      <div class="large-3 small-6 medium-4 columns">
+        <div id="align_center" class="align-center">
+          <a href="jodedom.html"><img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde"></a>
+        </div>
+      </div>
 
-<<<<<<< Updated upstream
-      <div id="align_center" class="align-center">
-        <a href="jodedom.html"><img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde">
-=======
       <div class="large-3 small-6 medium-4 columns">
         <div id="align_center" class="align-center">
           <img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde">
         </div>
->>>>>>> Stashed changes
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
