--- a/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
+++ b/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
@@ -13,6 +13,14 @@ h1 {
     color: red;
 }
 
-
 body {
+    background: url("/assets/barn/skoleveien.jpg") no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow:scroll;
+    overflow-x: hidden;
+}
+
+#wrapper{
+    min-height: 100%;
 }
