--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jødedommen</title>
     <link rel="stylesheet" href="./css/foundation.css" />
-    <link rel="stylesheet" href="./css/jodedommen.css" />
+    <link rel="stylesheet" href="/assets/barn/jodedommen.css" />
     <script src="./js/vendor/modernizr.js"></script>
 </head>
 
@@ -67,22 +67,22 @@
         <div class="row">
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/jode.png" alt="Jødedommen bilde">
+                    <img src="/assets/barn/jodedommen/jode.png" alt="Jødedommen bilde">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/kippa.png" alt="Kippa bilde">
+                    <img src="/assets/barn/jodedommen/kippa.png" alt="Kippa bilde">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/bonn.png" alt="Bønn film">
+                    <img src="/assets/barn//jodedommen/bonn.png" alt="Bønn film">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/tora.png" alt="Tora film">
+                    <img src="/assets/barn/jodedommen/tora.png" alt="Tora film">
                 </div>
             </div>
         </div>
@@ -90,18 +90,169 @@
         <div class="row">
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/shema.png" alt="Shema film">
+                    <img src="/assets/barn/jodedommen/shema.png" alt="Shema film">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
+                    <img src="/assets/barn/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
                 </div>
             </div>
 
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/jodedommen/tegn.png" alt="Film med tegnspråk">
+                    <img src="/assets/barn/jodedommen/tegn.png" alt="Film med tegnspråk">
+                </div>
+            </div>
+            <div class="large-3"></div>
+
+        </div>
+
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer id="footer" class="large-12 columns">
+        <div id="footerLogo" class="large-4 columns">
+            <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
+        </div>
+        <!-- lenker i midten -->
+        <div id="footerMid" class="large-6 columns">
+            <ul>
+                <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
+                </li>
+                <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
+                </li>
+                <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
+                </li>
+            </ul>
+        </div>
+        <!-- sosiale medier -->
+        <div id="socialLinks" class="large-2 columns">
+            <a href="https://www.facebook.com/salaby">
+                <img src="img/social/facebook_logo.png" alt="Facebooklogo">
+            </a>
+            <a href="https://www.youtube.com/user/SalabyGyldendal">
+                <img src="img/social/youtube_logo.png" alt="Youtubelogo">
+            </a>
+            <a href="#0" class="cd-top">Top</a>
+    </footer>
+
+    <!-- FOOTER SLUTT -->
+
+    <script src="./js/vendor/jquery.js"></script>
+    <script src="./js/foundation.min.js"></script>
+    <script src="./js/menuHeadScript.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+    $(document).foundation();
+    </script>
+</body>
+
+</html>
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jødedommen</title>
+    <link rel="stylesheet" href="./css/foundation.css" />
+    <link rel="stylesheet" href="/assets/barn/jodedommen.css" />
+    <script src="./js/vendor/modernizr.js"></script>
+</head>
+
+<body>
+
+    <!--MENU-->
+    <div class="fixed">
+        <nav class="top-bar" data-topbar role="navigation">
+            <ul class="title-area">
+                <li class="name">
+                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+                </li>
+                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+                </li>
+            </ul>
+
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
+                    <li><a href="../voksen/voksenForside.html">Lærer/foreldre siden</a>
+                    </li>
+                    <li><a href="#">Min side</a>
+                    </li>
+                    <li><a href="#">Logg ut</a>
+                    </li>
+                </ul>
+            </section>
+        </nav>
+    </div>
+
+
+
+    <section id="test">
+
+        <div class="row" id="mainMenu">
+
+            <div class="large-3 medium-6 small-6 columns">
+                <div class="menu-option">
+                    <img src="./img/RLE/logo_liten.png" alt="logo">
+                </div>
+            </div>
+            <div class="large-3 medium-6 small-6 columns">
+                <div class="menu-option">
+                    <a href="./RLE_SIDE.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
+                    </a>
+                </div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12">
+                <h1 class="fagh">JØDEDOMMEN</h1>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn/jodedommen/jode.png" alt="Jødedommen bilde">
+                </div>
+            </div>
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn/jodedommen/kippa.png" alt="Kippa bilde">
+                </div>
+            </div>
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn//jodedommen/bonn.png" alt="Bønn film">
+                </div>
+            </div>
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn/jodedommen/tora.png" alt="Tora film">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn/jodedommen/shema.png" alt="Shema film">
+                </div>
+            </div>
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
+                </div>
+            </div>
+
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="/assets/barn/jodedommen/tegn.png" alt="Film med tegnspråk">
                 </div>
             </div>
             <div class="large-3"></div>
