--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -13,14 +13,10 @@
 <!--ADULT SECTION-->
 <div id="adultSection">
   <div class="row">
-    <div class="small-12 columns">
-      <div class="overlay">
-        <%= link_to "Til voksensiden", static_pages_info_forside_path %> 
-      </div>
+    <div class="large-12 columns">
+        <%= link_to image_tag("index/adultSection.png", border: 0), static_pages_info_forside_path %>
     </div>
-    <div class="small-12 columns">
-        <img src="assets/index/adultSection.jpg">
-        <%= link_to "Til voksensiden", static_pages_info_forside_path %>
+    <div class="large-12 columns">
     </div>
   </div>
 </div>
