--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -3,7 +3,7 @@
     font-size: 15pt;
 }
 
-    /*CONSTRUCTORS*/
+/****************************************************CONSTRUCTORS********************/
 body {
     background-image: url(/assets/index/skoleveien.jpg);
     background-repeat: no-repeat;
