--- a/Salabytest/app/views/departments/_form.html.erb
+++ b/Salabytest/app/views/departments/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <label>Skriv inn klassenavn</label>
     <%= f.text_field :name %>
   </div>
   <div class="actions">
