--- a/Salabytest/app/views/departments/new.html.erb
+++ b/Salabytest/app/views/departments/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New department</h1>
+<%=render 'shared/page_header' %>
 
-<%= render 'form' %>
+<% if logged_in? && current_user.class_admin?%>
 
-<%= link_to 'Back', departments_path %>
+    <h1>Legg til klasse</h1>
+
+    <%= render 'form' %>
+
+    <% else %>
+
+    <p>Du har ikke adgang til denne siden. Logg inn for å fortsette</p>
+
+<%end%>
+
+  <%= link_to 'Gå tilbake', departments_path %>
