--- a/Salabytest/app/views/users/_form.html.erb
+++ b/Salabytest/app/views/users/_form.html.erb
@@ -3,19 +3,19 @@
     <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages' %>
 
-        <%= f.label :first_name %>
+        <label>Fornavn</label>
         <%= f.text_field :first_name %>
 
-        <%= f.label :last_name %>
+        <label>Etternavn</label>
         <%= f.text_field :last_name %>
 
-        <%= f.label :username %>
+        <label>Brukernavn</label>
         <%= f.text_field :username %>
 
-        <%= f.label :password %>
+        <label>Passord</label>
         <%= f.password_field :password %>
 
-        <%= f.label :password_confirmation, "Bekreft passordet" %>
+        <label>Gjenta passordet</label>
         <%= f.password_field :password_confirmation %>
 
         <%= f.submit "Lag konto", class: "btn btn-primary" %>
